@@ -565,6 +565,10 @@ world.gremlins = {
     'g_withStrategiesXSeedStrategyX_V_group_byXlabelX_byXbothE_weight_order_fold_sampleXlocal_5XXunfold': [(lambda g:g.with_strategies(SeedStrategy(seed=999999)).V().group().by(T.label).by(__.both_e().values('weight').order().fold().sample(Scope.local, 5)).unfold())], 
     'g_withStrategiesXSeedStrategyX_V_order_byXlabel_descX_sampleX1X_byXageX': [(lambda g:g.with_strategies(SeedStrategy(seed=999999)).V().order().by(T.label, Order.desc).sample(1).by('age'))], 
     'g_VX1X_valuesXageX_sampleXlocal_5X': [(lambda g, vid1=None:g.V(vid1).values('age').sample(Scope.local, 5))], 
+    'g_V_repeatXsampleX2XX_timesX2X': [(lambda g:g.V().repeat(__.sample(2)).times(2))], 
+    'g_V_sampleX2X_sampleX2X': [(lambda g:g.V().sample(2).sample(2))], 
+    'g_V3_repeatXout_order_byXperformancesX_sampleX2X_aggregateXxXX_untilXloops_isX2XX_capXxX_unfold': [(lambda g, vid3=None:g.V(vid3).repeat(__.out().order().by('performances').sample(2).aggregate('x')).until(__.loops().is_(2)).cap('x').unfold())], 
+    'g_V3_out_order_byXperformancesX_sampleX2X_aggregateXxX_out_order_byXperformancesX_sampleX2X_aggregateXxX_capXxX_unfold': [(lambda g, vid3=None:g.V(vid3).out().order().by('performances').sample(2).aggregate('x').out().order().by('performances').sample(2).aggregate('x').cap('x').unfold())], 
     'g_VX1X_outXcreatedX_inXcreatedX_simplePath': [(lambda g, vid1=None:g.V(vid1).out('created').in_('created').simple_path())], 
     'g_V_repeatXboth_simplePathX_timesX3X_path': [(lambda g:g.V().repeat(__.both().simple_path()).times(3).path())], 
     'g_V_asXaX_out_asXbX_out_asXcX_simplePath_byXlabelX_fromXbX_toXcX_path_byXnameX': [(lambda g:g.V().as_('a').out().as_('b').out().as_('c').simple_path().by(T.label).from_('b').to('c').path().by('name'))], 
